--- a/ALGORITHMS_RGR/view.ui
+++ b/ALGORITHMS_RGR/view.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>View</class>
  <widget class="QMainWindow" name="View">
+  <property name="windowModality">
+   <enum>Qt::NonModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -9,6 +12,12 @@
     <width>515</width>
     <height>400</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
@@ -18,8 +27,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>515</width>
-    <height>400</height>
+    <width>1500</width>
+    <height>1000</height>
    </size>
   </property>
   <property name="baseSize">
